fix homepage extra margin

--- a/themes/biztrox-hugo-modified/static/css/custom.css
+++ b/themes/biztrox-hugo-modified/static/css/custom.css
@@ -209,7 +209,7 @@ ol, ul {
     right: 0%;
 }
 
-.slick-list {
+.client-logo-slider .slick-list {
     margin-left: 5%;
     margin-right: 5%;
 }
